added filter by album

--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@
   <!-- Artist Albums !-->
 
       <select id = "selectAlbum">
-        <option disabled selected>Albums by Prince</option>
-        <option>For You</option>
-        <option>Prince</option>
-        <option>Dirty Mind</option>
-        <option>Controversy</option>
-        <option>1999</option>
+        <option disabled selected>Select an album.</option>
       </select>
 
       <select>
